Removed video from portfolio, added in arrows, pevented link from being clicked and fixed spacing on desktop.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -384,6 +384,26 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     transition: box-shadow 3s ease;
   }
 
+  #portfolio .swiper-slide {
+    pointer-events: none;
+  }
+
+  #portfolio .swiper-slide-active {
+    pointer-events: auto !important;
+  }
+
+  #portfolio .swiper-slide .relative {
+    opacity: 0.2;
+    -webkit-transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease;
+  }
+
+  #portfolio .swiper-slide-active .relative {
+    opacity: 1;
+    -webkit-transition: opacity 0.75s ease;
+    transition: opacity 0.75s ease;
+  }
+
   #portfolio .swiper-slide video {
     filter: brightness(20%);
     -webkit-transition: filter 0.5s ease;
@@ -485,6 +505,23 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     position: absolute;
     top: 47% !important;
     right: 10.3rem !important;
+  }
+
+  #portfolio .swiper-button-next {
+    height: 5rem;
+    position: absolute;
+    top: 44.75% !important;
+    right: 0rem !important;
+  }
+  #portfolio .swiper-button-prev {
+    height: 5rem;
+    position: absolute;
+    top: 44.75% !important;
+    left: 10.3rem !important;
+  }
+
+  #portfolio .swiper-button-disabled {
+    display: none;
   }
 
   /* Hammburger Menu */
